--- a/package.json
+++ b/package.json
@@ -10,12 +10,19 @@
     "test": "jest"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.2.1",
+    "@fortawesome/free-brands-svg-icons": "^6.2.1",
+    "@fortawesome/free-regular-svg-icons": "^6.2.1",
+    "@fortawesome/free-solid-svg-icons": "^6.2.1",
+    "@fortawesome/react-native-fontawesome": "^0.3.0",
     "@rneui/base": "^4.0.0-rc.7",
     "@rneui/themed": "^4.0.0-rc.7",
     "react": "18.2.0",
     "react-native": "0.71.1",
     "react-native-animatable": "^1.3.3",
+    "react-native-elements": "^3.4.3",
     "react-native-safe-area-context": "^4.5.0",
+    "react-native-svg": "^13.7.0",
     "react-native-vector-icons": "^9.2.0",
     "uuidv4": "^6.2.13"
   },
