--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-native-safe-area-context": "^4.5.0",
     "react-native-svg": "^13.7.0",
     "react-native-vector-icons": "^9.2.0",
+    "react-social-icons": "^5.15.0",
     "uuidv4": "^6.2.13"
   },
   "devDependencies": {
