--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-native-elements": "^3.4.3",
     "react-native-safe-area-context": "^4.5.0",
     "react-native-svg": "^13.7.0",
+    "react-native-swiper": "^1.6.0",
     "react-native-vector-icons": "^9.2.0",
     "react-social-icons": "^5.15.0",
     "uuidv4": "^6.2.13"
