--- a/package.json
+++ b/package.json
@@ -15,13 +15,20 @@
     "@fortawesome/free-regular-svg-icons": "^6.2.1",
     "@fortawesome/free-solid-svg-icons": "^6.2.1",
     "@fortawesome/react-native-fontawesome": "^0.3.0",
+    "@react-navigation/bottom-tabs": "^6.5.3",
+    "@react-navigation/drawer": "^6.5.7",
+    "@react-navigation/native": "^6.1.2",
+    "@react-navigation/native-stack": "^6.9.8",
+    "@react-navigation/stack": "^6.3.11",
     "@rneui/base": "^4.0.0-rc.7",
     "@rneui/themed": "^4.0.0-rc.7",
     "react": "18.2.0",
     "react-native": "0.71.1",
     "react-native-animatable": "^1.3.3",
     "react-native-elements": "^3.4.3",
+    "react-native-gesture-handler": "^2.9.0",
     "react-native-safe-area-context": "^4.5.0",
+    "react-native-screens": "^3.19.0",
     "react-native-svg": "^13.7.0",
     "react-native-swiper": "^1.6.0",
     "react-native-vector-icons": "^9.2.0",
