--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react": "18.2.0",
     "react-native": "0.71.1",
     "react-native-animatable": "^1.3.3",
+    "react-native-countdown-component": "^2.7.1",
     "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "^2.9.0",
     "react-native-safe-area-context": "^4.5.0",
